- 去掉dy属性